--- a/src/skeleton.scss
+++ b/src/skeleton.scss
@@ -1,13 +1,8 @@
 @import "node_modules/normalize-scss/sass/normalize"; // import normalize-scss
 @include normalize();
 
-@import "node_modules/skeleton-sass-official/skeleton/core/config"; // Skeleton Sass core loader
-
-// import default theme variables
-@import "node_modules/skeleton-sass-official/skeleton/themes/fresh/vars"; // theme variable overrides
-@import "./src/variables";
+@import "./variables";
 
 // import default theme styles
 @import "node_modules/skeleton-sass-official/skeleton/themes/fresh/include_components"; // theme base styles
 @import "node_modules/skeleton-sass-official/skeleton/themes/fresh/grid"; // theme grid styles
-
