Fix location watcher

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -14,3 +14,4 @@ $theme-primary: $nus-blue;
 $button-primary-background-color: $nus-orange;
 $button-primary-hover-background-color: $nus-silver;
 $button-primary-hover-border-color: $button-primary-hover-background-color;
+$button-primary-color: #fff;
